--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h2>Tom's Website</h2>
+            <h1>Tom's Website</h1>
             <nav>
                 <li><a href="./index.html">home</a></li>
                 <li><a href="./projects.html">projects</a></li>
@@ -15,10 +15,10 @@
             </nav>
         </header>
         <main>
-            <p>Welcome. This is the personal site of Thomas Bennett. Please see my <a href="./projects.html">list of projects</a> or <a href="./contact.html">contact me</a> if you have any questions.</p>
+            <h3>Contact Me</h3>
         </main>
         <footer>
-            <p>last updated: 11/11/24</p>
+            <p><a href="./index.html">home</a></p>
         </footer>
     </body>
 </html>
