--- a/links.html
+++ b/links.html
@@ -15,10 +15,11 @@
             </nav>
         </header>
         <main>
-            <p>Welcome. This is the personal site of Thomas Bennett. Please see my <a href="./projects.html">list of projects</a> or <a href="./contact.html">contact me</a> if you have any questions.</p>
+            <h3>Links</h3>
+            <p><a href="https://github.com/austin-b">github</a></p>
         </main>
         <footer>
-            <p>last updated: 11/11/24</p>
+            <p><a href="./index.html">home</a></p>
         </footer>
     </body>
 </html>
