--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,9 @@
     <head>
         <title>Tom's Website</title>
         <link rel="stylesheet" href="styles.css">
+        <script>
+
+        </script>
     </head>
     <body>
         <header>
@@ -15,10 +18,15 @@
             </nav>
         </header>
         <main>
-            <p>Welcome. This is the personal site of Thomas Bennett. Please see my <a href="./projects.html">list of projects</a> or <a href="./contact.html">contact me</a> if you have any questions.</p>
+            <h3>Projects</h3>
+            <article>
+                <ul id="project-list">
+                    <li><a href="./projects/website.html">This Website</a></li>
+                </ul>
+            </article>
         </main>
         <footer>
-            <p>last updated: 11/11/24</p>
+            <p><a href="./index.html">home</a></p>
         </footer>
     </body>
 </html>
