--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </nav>
         </header>
         <main>
-            <p>Welcome. This is the personal site of Thomas Bennett. Please see my <a href="./projects.html">list of projects</a> or <a href="./contact.html">contact me</a> if you have any questions.</p>
+            <p>Welcome. This is the Tom's personal site. Please see my <a href="./projects.html">list of projects</a> or <a href="./contact.html">contact me</a> if you have any questions.</p>
         </main>
         <footer>
             <p>last updated: 11/11/24</p>
