main page style changes, certs

--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
                 <li><a href="./contact.html">contact</a></li>
             </nav>
         </header>
-        <main>
-            <p>Welcome. This is the Tom's personal site. Please see my <a href="./projects.html">list of projects</a> or <a href="./contact.html">contact me</a> if you have any questions.</p>
-        </main>
+        <main id="home-main">
+            <article>
+				<p>Welcome. This is Tom's personal site. Please see my <a href="./projects.html">list of projects</a> or <a href="./contact.html">contact me</a> if you have any questions.</p>
+			</article>
+			<article>
+				<h4>Current certifications:</h4>
+				<ul>
+					<li>Microsoft Certified: Azure Fundamentals</li>
+					<li>ITILv4 Foundations</li>
+					<li>CompTIA Security+</li>
+					<li>CompTIA Network+</li>
+					<li>CompTIA A+</li>
+				</ul>
+			</article>
+		</main>
         <footer>
             <p>last updated: 11/11/24</p>
         </footer>
