contact me, utility classes

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,8 @@
         </header>
         <main>
             <h3>Contact Me</h3>
+            <br>
+            <a href="mailto:t.austinbennett@gmail.com">t.austinbennett@gmail.com</a>
         </main>
         <footer>
             <p><a href="./index.html">home</a></p>
