Added website documentation, cleaned up styling and removed script tags

--- a/links.html
+++ b/links.html
@@ -15,8 +15,10 @@
             </nav>
         </header>
         <main>
-            <h3>Links</h3>
-            <p><a href="https://github.com/austin-b">github</a></p>
+            <h3>Links:</h3>
+            <article>
+                <p><a href="https://github.com/austin-b">GitHub profile</a></p>
+            </article>
         </main>
         <footer>
             <p><a href="./index.html">home</a></p>
