--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,6 @@
     <head>
         <title>Tom's Website</title>
         <link rel="stylesheet" href="styles.css">
-        <script>
-
-        </script>
     </head>
     <body>
         <header>
@@ -21,7 +18,7 @@
             <h3>Projects</h3>
             <article>
                 <ul id="project-list">
-                    <li><a href="./projects/website.html">This Website</a></li>
+                    <li><a href="./projects/website.html">This Website</a> <span class="caption">— GitHub Pages, Cloudfare, VS Code, GitHub Copilot</span></li>
                 </ul>
             </article>
         </main>
