--- a/projects/website.html
+++ b/projects/website.html
@@ -3,9 +3,6 @@
     <head>
         <title>Tom's Website</title>
         <link rel="stylesheet" href="../styles.css">
-        <script>
-
-        </script>
     </head>
     <body>
         <header>
@@ -20,14 +17,25 @@
         <main>         
             <h3>Website</h3>
             <article>
-                <p>The first project that I'll document is this website itself, which was surprisingly simple.</p>
-
-                <p>First, I followed <a href="https://learn.microsoft.com/en-us/azure/storage/blobs/storage-blob-static-website-how-to?tabs=azure-portal">this guide</a>, created the basic site in VS Code, and deployed it using the Azure extension in VS Code.</p>
-
-                <p>Then I registered the domain on Cloudfare, followed <a href="https://learn.microsoft.com/en-us/azure/storage/blobs/storage-custom-domain-name?tabs=azure-portal">this</a> to point to it, and voila!</p> 
-                
-                <p>Not much more than that, and I have a newly-hosted site as a base for other projects. I do plan on expanding the site, hosting a couple of other things, and making it look nicer, but for now it serves it's purpose.</p>
+                <h4>Description:</h4>
+                <p>This website serves as a portfolio and documentation hub for my projects and experiments. The site is a static site hosted via GitHub Pages, utilizing Cloudflare for DNS resolution (www CNAME record pointing to Page).</p>
             </article>
+            <article>
+                <h4>Technologies Used:</h4>
+                <ul>
+                    <li>GitHub Pages <span class="caption">— site hosting</span></li>
+                    <li>Cloudflare <span class="caption">— domain registration and DNS</span></li>
+                    <li>VS Code <span class="caption">— local development pushed to GitHub repo</span></li>
+                    <li>GitHub Copilot <span class="caption">— AI assistance</span></li>
+                </ul>
+            </article>
+            <article>
+                <h4>Links:</h4>
+                <ul>
+                    <li><a href="https://github.com/austin-b" target="_blank">GitHub Profile</a></li>
+                    <li><a href="https://github.com/austin-b/austin-b.github.io" target="_blank">GitHub Repository</a></li>
+                    <li><a href="https://www.toms-projects.com" target="_blank">Live Site</a></li>
+                </ul>
         </main>
         <footer>
             <p><a href="./index.html">home</a></p>
